# FFmpegtry

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/codingwithnobody/myandroidapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  myandroidapp.cpp
app/src/main/java/com/codingwithnobody/myandroidapp/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/codingwithnobody/myandroidapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
